[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fermo_gui"
description = "Visalization part of program FERMO"
version = "0.9.0"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" },
    { name = "Hannah E. Augustijn", email = "hannah.augustijn@gmail.com"}
]

dependencies = [
    "jsonschema==4.19.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.4.0",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  "fermo_gui"
]
