[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fermo_gui"
description = "Visalization part of program FERMO"
version = "0.9.1"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" },
    { name = "Hannah E. Augustijn", email = "hannah.augustijn@gmail.com"}
]

dependencies = [
    "jsonschema==4.19.0",
    "Flask==3.0.1",
    "Flask-WTF==1.2.1",
    "celery[redis]==5.2.7",
    "Flask-Session==0.6.0",
    "Flask-Mail==0.9.1",
    "email-validator==2.1.0.post1",
    "Flask-SocketIO==5.3.6",
    "pydantic==2.5.2",
    "fermo_core~=0.1.1"
]

[project.optional-dependencies]
dev = [
    "pre-commit==3.4.0",
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "pytest-flask==1.3.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  "fermo_gui"
]
